--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -56,10 +56,7 @@
             font-weight: bold;
             font-size: 25px;
         }
-        /* span {
-            padding: 5px;
-            border-radius: 50px;
-        } */
+      
         .winning {
             color: #0000ff;
         }
@@ -77,7 +74,10 @@
         /* table */
         .gameList {
             width: 100%;
-            margin: 5rem 0;
+            margin-top: 5rem;
+            background-color: #000;
+            /* background-image: url("https://i.postimg.cc/WpKz51xc/lotto.jpg");
+            background-repeat: repeat-x; */
          
         }
         table {
@@ -186,40 +186,6 @@
     <div class="gameResults">
 
         <section aria-label="two days ago result">
-            <h2 class="date">tuesday 20/02/2024</h2>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">6 - 29 - 88 - 52 - 61</p>
-                <p class="machine">63 - 76 - 45 - 73 - 36</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">52 - 41 - 6 - 78 - 7</p>
-                <p class="machine">10 - 67 - 79 - 72 - 64</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">15 - 34 - 30 - 49 - 28</p>
-                <p class="machine">58 - 59 - 7 - 81 - 37</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">26 - 6 - 17 - 33 - 3</p>
-                <p class="machine">78 - 15 - 63 - 54 - 46</p>        
-            </article>
-            <article>
-                <h3 class="game">LUCKY-G</h3>
-                <p class="winning">15 - 61 - 17 - 85 - 32</p>
-                <p class="machine">51 - 64 - 82 - 26 - 40</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">32 - 51 - 52 - 47 - 44</p>
-                <p class="machine">10 - 86 - 84 - 29 - 83</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">wednesday 21/02/2024</h2>
             <article>
                 <h3 class="game">Tota</h3>
@@ -250,6 +216,41 @@
                 <h3 class="game">Lucky</h3>
                 <p class="winning">53 - 17 - 77 - 2 - 80</p>
                 <p class="machine">4 - 9 - 66 - 34 - 1</p>        
+            </article>
+        </section>
+
+
+        <section aria-label="yesterday result">
+            <h2 class="date">thursday</h2>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">11 - 5 - 65 - 50 - 58</p>
+                <p class="machine">55 - 85 - 33 - 25 - 56</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">22 - 88 - 43 - 77 - 1</p>
+                <p class="machine">71 - 39 - 89 - 4 - 73</p>        
+            </article>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">17 - 15 - 25 - 33 - 8</p>
+                <p class="machine">66 - 65 - 13 - 39 - 29</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">53 - 88 - 60 - 11 - 71</p>
+                <p class="machine">32 - 38 - 90 - 5 - 6</p>        
+            </article>
+            <article>
+                <h3 class="game">Fortune</h3>
+                <p class="winning">30 - 29 - 69 - 32 - 11</p>
+                <p class="machine">12 - 76 - 19 - 62 - 85</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">2 - 90 - 50 - 26 - 44</p>
+                <p class="machine">25 - 20 - 57 - 35 - 72</p>        
             </article>
         </section>
     </div>
