--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -186,41 +186,6 @@
     <div class="gameResults">
 
         <section aria-label="two days ago result">
-            <h2 class="date">wednesday 21/02/2024</h2>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">35 - 20 - 83 - 24 - 79</p>
-                <p class="machine">9 - 39 - 76 - 8 - 3</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">7 - 80 - 84 - 10 - 62</p>
-                <p class="machine">44 - 53 - 83 - 41 - 29</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">1 - 50 - 75 - 83 - 52</p>
-                <p class="machine">39 - 87 - 68 - 5 - 56</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">76 - 3 - 38 - 87 - 79</p>
-                <p class="machine">4 - 57 - 1 - 43 - 29</p>        
-            </article>
-            <article>
-                <h3 class="game">Midweek</h3>
-                <p class="winning">10 - 1 - 73 - 31 - 7</p>
-                <p class="machine">88 - 90 - 83 - 25 - 81</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">53 - 17 - 77 - 2 - 80</p>
-                <p class="machine">4 - 9 - 66 - 34 - 1</p>        
-            </article>
-        </section>
-
-
-        <section aria-label="yesterday result">
             <h2 class="date">thursday</h2>
             <article>
                 <h3 class="game">People</h3>
@@ -251,6 +216,40 @@
                 <h3 class="game">Bingo</h3>
                 <p class="winning">2 - 90 - 50 - 26 - 44</p>
                 <p class="machine">25 - 20 - 57 - 35 - 72</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">friday 23/02/2024</h2>
+            <article>
+                <h3 class="game">royal</h3>
+                <p class="winning">39 - 35 - 41 - 34 - 84</p>
+                <p class="machine">15 - 90 - 49 - 8 - 2</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">74 - 35 - 12 - 86 - 78</p>
+                <p class="machine">21 - 27 - 44 - 49 - 54</p>        
+            </article>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">82 - 76 - 37 - 85 - 71</p>
+                <p class="machine">45 - 34 - 13 - 14 - 25</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">22 - 83 - 48 - 17 - 59</p>
+                <p class="machine">81 - 63 - 54 - 4 - 60</p>        
+            </article>
+            <article>
+                <h3 class="game">Bonanza</h3>
+                <p class="winning">22 - 62 - 6 - 18 - 38</p>
+                <p class="machine">72 - 79 - 40 - 89 - 45</p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">22 - 59 - 21 - 16 - 50</p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
