--- a/plan.html
+++ b/plan.html
@@ -109,10 +109,8 @@
         }
 
         i {
-            color: #fff;
-            background-color: #000;
-            padding-inline: 10px;
-        }
+            font-size: small;
+        } 
 
         span {
             background-color: #f5f5f5;
@@ -249,7 +247,9 @@
     <main>
         <h1>Please Check Back Some Few Time</h1>
         <h2>All Plans have been closed</h2>
-        <h2>Nothing To Show Now</h2> 
+        <p>Nothing To Show Now. 
+            <i>But if you have a recent plan you are following through this "PLAN PAGE" and you want us to reopen it, tell us through any of our social media handle</i>
+        </p> 
 
 
         <!-- <h2>Welcome to Plan Page</h2>
