--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -186,40 +186,6 @@
     <div class="gameResults">
 
         <section aria-label="two days ago result">
-            <h2 class="date">thursday</h2>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">11 - 5 - 65 - 50 - 58</p>
-                <p class="machine">55 - 85 - 33 - 25 - 56</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">22 - 88 - 43 - 77 - 1</p>
-                <p class="machine">71 - 39 - 89 - 4 - 73</p>        
-            </article>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">17 - 15 - 25 - 33 - 8</p>
-                <p class="machine">66 - 65 - 13 - 39 - 29</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">53 - 88 - 60 - 11 - 71</p>
-                <p class="machine">32 - 38 - 90 - 5 - 6</p>        
-            </article>
-            <article>
-                <h3 class="game">Fortune</h3>
-                <p class="winning">30 - 29 - 69 - 32 - 11</p>
-                <p class="machine">12 - 76 - 19 - 62 - 85</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">2 - 90 - 50 - 26 - 44</p>
-                <p class="machine">25 - 20 - 57 - 35 - 72</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">friday 23/02/2024</h2>
             <article>
                 <h3 class="game">royal</h3>
@@ -250,6 +216,40 @@
                 <h3 class="game">vag</h3>
                 <p class="winning">22 - 59 - 21 - 16 - 50</p>
                 <p class="machine"></p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">saturday 24/02/2024</h2>
+            <article>
+                <h3 class="game">Premier King</h3>
+                <p class="winning">79 - 63 - 36 - 25 - 26</p>
+                <p class="machine">13 - 34 - 82 - 32 - 72</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">43 - 90 - 14 - 37 - 34</p>
+                <p class="machine">32 - 19 - 20 - 15 - 9</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">26 - 67 - 74 - 25 - 79</p>
+                <p class="machine">10 - 16 - 33 - 14 - 55</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">54 - 12 - 71 - 83 - 30</p>
+                <p class="machine">39 - 62 - 37 - 64 - 74</p>        
+            </article>
+            <article>
+                <h3 class="game">National</h3>
+                <p class="winning">66 - 24 - 81 - 3 - 51</p>
+                <p class="machine">82 - 47 - 90 - 35 - 46</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">46 - 62 - 17 - 38 - 83</p>
+                <p class="machine">15 - 30 - 50 - 64 - 51</p>        
             </article>
         </section>
     </div>
