--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -184,42 +184,7 @@
         </nav>
     </header>
     <div class="gameResults">
-
         <section aria-label="two days ago result">
-            <h2 class="date">friday 23/02/2024</h2>
-            <article>
-                <h3 class="game">royal</h3>
-                <p class="winning">39 - 35 - 41 - 34 - 84</p>
-                <p class="machine">15 - 90 - 49 - 8 - 2</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">74 - 35 - 12 - 86 - 78</p>
-                <p class="machine">21 - 27 - 44 - 49 - 54</p>        
-            </article>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">82 - 76 - 37 - 85 - 71</p>
-                <p class="machine">45 - 34 - 13 - 14 - 25</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">22 - 83 - 48 - 17 - 59</p>
-                <p class="machine">81 - 63 - 54 - 4 - 60</p>        
-            </article>
-            <article>
-                <h3 class="game">Bonanza</h3>
-                <p class="winning">22 - 62 - 6 - 18 - 38</p>
-                <p class="machine">72 - 79 - 40 - 89 - 45</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">22 - 59 - 21 - 16 - 50</p>
-                <p class="machine"></p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">saturday 24/02/2024</h2>
             <article>
                 <h3 class="game">Premier King</h3>
@@ -250,6 +215,40 @@
                 <h3 class="game">Fair Chance</h3>
                 <p class="winning">46 - 62 - 17 - 38 - 83</p>
                 <p class="machine">15 - 30 - 50 - 64 - 51</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">sunday 25/02/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">89 - 43 - 53 - 9 - 68</p>
+                <p class="machine">18 - 81 - 36 - 37 - 21</p>        
+            </article>
+            <article>
+                <h3 class="game">mark</h3>
+                <p class="winning">86 - 50 - 25 - 46 - 42</p>
+                <p class="machine">3 - 13 - 29 - 53 - 59</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
