--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -231,24 +231,24 @@
                 <p class="machine">3 - 13 - 29 - 53 - 59</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Enugu</h3>
+                <p class="winning">49 - 52 - 45 - 75 - 62</p>
+                <p class="machine">6 - 72 - 43 - 41 - 66</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Aseda</h3>
+                <p class="winning">81 - 34 - 39 - 69 - 26</p>
+                <p class="machine">21 - 66 - 55 - 22 - 2</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Lucky</h3>
+                <p class="winning">43 - 17 - 83 - 58 - 88</p>
+                <p class="machine">3 - 65 - 20 - 26 - 13</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Tota</h3>
+                <p class="winning">24 - 88 - 76 - 61 - 60</p>
+                <p class="machine">10 - 3 - 11 - 62 - 89</p>        
             </article>
         </section>
     </div>
