--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -185,40 +185,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">saturday 24/02/2024</h2>
-            <article>
-                <h3 class="game">Premier King</h3>
-                <p class="winning">79 - 63 - 36 - 25 - 26</p>
-                <p class="machine">13 - 34 - 82 - 32 - 72</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">43 - 90 - 14 - 37 - 34</p>
-                <p class="machine">32 - 19 - 20 - 15 - 9</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">26 - 67 - 74 - 25 - 79</p>
-                <p class="machine">10 - 16 - 33 - 14 - 55</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">54 - 12 - 71 - 83 - 30</p>
-                <p class="machine">39 - 62 - 37 - 64 - 74</p>        
-            </article>
-            <article>
-                <h3 class="game">National</h3>
-                <p class="winning">66 - 24 - 81 - 3 - 51</p>
-                <p class="machine">82 - 47 - 90 - 35 - 46</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">46 - 62 - 17 - 38 - 83</p>
-                <p class="machine">15 - 30 - 50 - 64 - 51</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">sunday 25/02/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -249,6 +215,40 @@
                 <h3 class="game">Tota</h3>
                 <p class="winning">24 - 88 - 76 - 61 - 60</p>
                 <p class="machine">10 - 3 - 11 - 62 - 89</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">monday 26/02/2024</h2>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">46 - 11 - 2 - 20 - 85</p>
+                <p class="machine">27 - 50 - 7 - 62 - 67</p>        
+            </article>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">29 - 40 - 17 - 59 - 47</p>
+                <p class="machine">34 - 78 - 20 - 42 - 56</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">90 - 34 - 31 - 67 - 45</p>
+                <p class="machine">75 - 40 - 64 - 50 - 70</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">80 - 57 - 45 - 27 - 46</p>
+                <p class="machine">19 - 64 - 41 - 14 - 1</p>        
+            </article>
+            <article>
+                <h3 class="game">MSP</h3>
+                <p class="winning">35 - 4 - 90 - 54 - 67</p>
+                <p class="machine">43 - 51 - 56 - 73 - 48</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">10 - 37 - 35 - 83 - 11</p>
+                <p class="machine">90 - 12 - 2 - 46 - 31</p>        
             </article>
         </section>
     </div>
