--- a/classification.html
+++ b/classification.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Visual Lotto Board</title>
 
-    <link rel="icon" type="image/png" href="/Assets/hbc-logo-edit.jpg">
+    <!-- <link rel="icon" type="image/png" href="/Assets/hbc-logo-edit.jpg"> -->
 
     <style>
 
