--- a/classification.html
+++ b/classification.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Visual Lotto Board</title>
+    <title>Visual Lotto Board | Classification Chart</title>
 
-    <!-- <link rel="icon" type="image/png" href="/Assets/hbc-logo-edit.jpg"> -->
+    <meta property="og:title" content="Classification Chart">
+    <meta property="og:description" content="Functionality of Lotto numbers from 1 to 90">
+    <meta property="og:image" content="https://i.postimg.cc/J7fH69XZ/Screenshot-2024-01-15-014033.png">
+    <meta property="og:image:alt" content="Numbers from 1 to 90 relating to each other">
+    <meta  property="og:url" content="https://vlb.hologutibusinesscentre.com/classification">
+
 
     <style>
 
@@ -79,7 +84,7 @@
             transition: 0.4s;
         } */
 
-        @media screen and (max-width: 600px) {
+        @media screen and (max-width: 610px) {
             body {
                 width: 100%;
                 padding: 0;
@@ -88,7 +93,7 @@
 
             .wrapper {
                 flex-direction: column;
-                gap: 1rem;
+                gap: 2rem;
             }
         }
         
