--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -185,40 +185,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">sunday 25/02/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">89 - 43 - 53 - 9 - 68</p>
-                <p class="machine">18 - 81 - 36 - 37 - 21</p>        
-            </article>
-            <article>
-                <h3 class="game">mark</h3>
-                <p class="winning">86 - 50 - 25 - 46 - 42</p>
-                <p class="machine">3 - 13 - 29 - 53 - 59</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">49 - 52 - 45 - 75 - 62</p>
-                <p class="machine">6 - 72 - 43 - 41 - 66</p>        
-            </article>
-            <article>
-                <h3 class="game">Aseda</h3>
-                <p class="winning">81 - 34 - 39 - 69 - 26</p>
-                <p class="machine">21 - 66 - 55 - 22 - 2</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">43 - 17 - 83 - 58 - 88</p>
-                <p class="machine">3 - 65 - 20 - 26 - 13</p>        
-            </article>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">24 - 88 - 76 - 61 - 60</p>
-                <p class="machine">10 - 3 - 11 - 62 - 89</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">monday 26/02/2024</h2>
             <article>
                 <h3 class="game">Diamond</h3>
@@ -249,6 +215,40 @@
                 <h3 class="game">International</h3>
                 <p class="winning">10 - 37 - 35 - 83 - 11</p>
                 <p class="machine">90 - 12 - 2 - 46 - 31</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">tuesday 26/02/2024</h2>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">15 - 80 - 42 - 69 - 78</p>
+                <p class="machine">6 - 85 - 36 - 17 - 8</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">21 - 7 - 40 - 85 - 82</p>
+                <p class="machine">76 - 13 - 45 - 2 - 74</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">90 - 14 - 39 - 83 - 72</p>
+                <p class="machine">71 - 56 - 81 - 27 - 37</p>        
+            </article>
+            <article>
+                <h3 class="game">club Master</h3>
+                <p class="winning">81 - 89 - 72 - 12 - 18</p>
+                <p class="machine">56 - 27 - 87 - 36 - 2</p>        
+            </article>
+            <article>
+                <h3 class="game">LUCKY-G</h3>
+                <p class="winning">13 - 7 - 5 - 68 - 53</p>
+                <p class="machine">51 - 19 - 21 - 16 - 43</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">42 - 75 - 52 - 21 - 72</p>
+                <p class="machine">29 - 12 - 24 - 10 - 5</p>        
             </article>
         </section>
     </div>
