--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -185,40 +185,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">monday 26/02/2024</h2>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">46 - 11 - 2 - 20 - 85</p>
-                <p class="machine">27 - 50 - 7 - 62 - 67</p>        
-            </article>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">29 - 40 - 17 - 59 - 47</p>
-                <p class="machine">34 - 78 - 20 - 42 - 56</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">90 - 34 - 31 - 67 - 45</p>
-                <p class="machine">75 - 40 - 64 - 50 - 70</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">80 - 57 - 45 - 27 - 46</p>
-                <p class="machine">19 - 64 - 41 - 14 - 1</p>        
-            </article>
-            <article>
-                <h3 class="game">MSP</h3>
-                <p class="winning">35 - 4 - 90 - 54 - 67</p>
-                <p class="machine">43 - 51 - 56 - 73 - 48</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">10 - 37 - 35 - 83 - 11</p>
-                <p class="machine">90 - 12 - 2 - 46 - 31</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">tuesday 26/02/2024</h2>
             <article>
                 <h3 class="game">Gold</h3>
@@ -249,6 +215,40 @@
                 <h3 class="game">Super</h3>
                 <p class="winning">42 - 75 - 52 - 21 - 72</p>
                 <p class="machine">29 - 12 - 24 - 10 - 5</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">wednesday 28/02/2024</h2>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">84 - 59 - 52 - 40 - 80</p>
+                <p class="machine">88 - 27 - 90 - 77 - 42</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">65 - 79 - 84 - 49 - 78</p>
+                <p class="machine">82 - 87 - 62 - 59 - 8</p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">50 - 65 - 11 - 43 - 29</p>
+                <p class="machine">72 - 38 - 51 - 83 - 19</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">33 - 65 - 2 - 24 - 14</p>
+                <p class="machine">59 - 67 - 60 - 28 - 58</p>        
+            </article>
+            <article>
+                <h3 class="game">Midweek</h3>
+                <p class="winning">43 - 86 - 57 - 35 - 83</p>
+                <p class="machine">84 - 21 - 68 - 18 - 87</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky</h3>
+                <p class="winning">39 - 76 - 33 - 11 - 85</p>
+                <p class="machine">60 - 31 - 80 - 52 - 30</p>        
             </article>
         </section>
     </div>
