FEB 29/last day/2024

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -185,40 +185,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">tuesday 26/02/2024</h2>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">15 - 80 - 42 - 69 - 78</p>
-                <p class="machine">6 - 85 - 36 - 17 - 8</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">21 - 7 - 40 - 85 - 82</p>
-                <p class="machine">76 - 13 - 45 - 2 - 74</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">90 - 14 - 39 - 83 - 72</p>
-                <p class="machine">71 - 56 - 81 - 27 - 37</p>        
-            </article>
-            <article>
-                <h3 class="game">club Master</h3>
-                <p class="winning">81 - 89 - 72 - 12 - 18</p>
-                <p class="machine">56 - 27 - 87 - 36 - 2</p>        
-            </article>
-            <article>
-                <h3 class="game">LUCKY-G</h3>
-                <p class="winning">13 - 7 - 5 - 68 - 53</p>
-                <p class="machine">51 - 19 - 21 - 16 - 43</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">42 - 75 - 52 - 21 - 72</p>
-                <p class="machine">29 - 12 - 24 - 10 - 5</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">wednesday 28/02/2024</h2>
             <article>
                 <h3 class="game">Tota</h3>
@@ -249,6 +215,40 @@
                 <h3 class="game">Lucky</h3>
                 <p class="winning">39 - 76 - 33 - 11 - 85</p>
                 <p class="machine">60 - 31 - 80 - 52 - 30</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">thursday 29/02/2024</h2>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">45 - 50 - 76 - 32 - 85</p>
+                <p class="machine">16 - 65 - 28 - 58 - 79</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">13 - 23 - 34 - 35 - 81</p>
+                <p class="machine">36 - 64 - 65 - 40 - 48</p>        
+            </article>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">10 - 64 - 54 - 49 - 3</p>
+                <p class="machine">7 - 65 - 20 - 70 - 27</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">89 - 70 - 87 - 84 - 6</p>
+                <p class="machine">69 - 68 - 4 - 27 - 90</p>        
+            </article>
+            <article>
+                <h3 class="game">Fortune</h3>
+                <p class="winning">82 - 37 - 77 - 43 - 75</p>
+                <p class="machine">72 - 87 - 79 - 34 - 86</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">74 - 1 - 78 - 44 - 34</p>
+                <p class="machine">26 - 79 - 63 - 65 - 33</p>        
             </article>
         </section>
     </div>
