--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -176,6 +176,16 @@
                 }
             }
     </style>
+
+        <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FVP4BPSD2P"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-FVP4BPSD2P');
+    </script>
 </head>
 <body>
     <header>
@@ -185,40 +195,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">wednesday 28/02/2024</h2>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">84 - 59 - 52 - 40 - 80</p>
-                <p class="machine">88 - 27 - 90 - 77 - 42</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">65 - 79 - 84 - 49 - 78</p>
-                <p class="machine">82 - 87 - 62 - 59 - 8</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">50 - 65 - 11 - 43 - 29</p>
-                <p class="machine">72 - 38 - 51 - 83 - 19</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">33 - 65 - 2 - 24 - 14</p>
-                <p class="machine">59 - 67 - 60 - 28 - 58</p>        
-            </article>
-            <article>
-                <h3 class="game">Midweek</h3>
-                <p class="winning">43 - 86 - 57 - 35 - 83</p>
-                <p class="machine">84 - 21 - 68 - 18 - 87</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">39 - 76 - 33 - 11 - 85</p>
-                <p class="machine">60 - 31 - 80 - 52 - 30</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">thursday 29/02/2024</h2>
             <article>
                 <h3 class="game">People</h3>
@@ -249,6 +225,40 @@
                 <h3 class="game">Bingo</h3>
                 <p class="winning">74 - 1 - 78 - 44 - 34</p>
                 <p class="machine">26 - 79 - 63 - 65 - 33</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">friday 1/03/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">33 - 31 - 43 - 45 - 53</p>
+                <p class="machine">23 - 26 - 8 - 7 - 82</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">38 - 17 - 80 - 9 - 2</p>
+                <p class="machine">82 - 31 - 49 - 45 - 70</p>        
+            </article>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">6 - 81 - 21 - 77 - 1</p>
+                <p class="machine">28 - 57 - 2 - 50 - 35</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">10 - 12 - 76 - 6 - 62</p>
+                <p class="machine">24 - 52 - 58 - 23 - 55</p>        
+            </article>
+            <article>
+                <h3 class="game">Bonanza</h3>
+                <p class="winning">25 - 1 - 4 - 65 - 8</p>
+                <p class="machine">10 - 23 - 52 - 79 - 86</p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">46 - 11 - 77 - 90 - 88</p>
+                <p class="machine">26 - 86 - 44 - 80 - 31</p>        
             </article>
         </section>
     </div>
