--- a/GAMES/10Super.html
+++ b/GAMES/10Super.html
@@ -8,6 +8,16 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3639147338737274" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="tableStyles.css">
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FVP4BPSD2P"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-FVP4BPSD2P');
+    </script>
+
 </head>
 <body>
     <main>
