--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -195,40 +195,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">thursday 29/02/2024</h2>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">45 - 50 - 76 - 32 - 85</p>
-                <p class="machine">16 - 65 - 28 - 58 - 79</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">13 - 23 - 34 - 35 - 81</p>
-                <p class="machine">36 - 64 - 65 - 40 - 48</p>        
-            </article>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">10 - 64 - 54 - 49 - 3</p>
-                <p class="machine">7 - 65 - 20 - 70 - 27</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">89 - 70 - 87 - 84 - 6</p>
-                <p class="machine">69 - 68 - 4 - 27 - 90</p>        
-            </article>
-            <article>
-                <h3 class="game">Fortune</h3>
-                <p class="winning">82 - 37 - 77 - 43 - 75</p>
-                <p class="machine">72 - 87 - 79 - 34 - 86</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">74 - 1 - 78 - 44 - 34</p>
-                <p class="machine">26 - 79 - 63 - 65 - 33</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">friday 1/03/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -259,6 +225,40 @@
                 <h3 class="game">vag</h3>
                 <p class="winning">46 - 11 - 77 - 90 - 88</p>
                 <p class="machine">26 - 86 - 44 - 80 - 31</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">saturday 2/03/2024</h2>
+            <article>
+                <h3 class="game">Premier King</h3>
+                <p class="winning">58 - 74 - 17 - 80 - 55</p>
+                <p class="machine">88 - 44 - 76 - 48 - 13</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">52 - 31 - 18 - 61 - 21</p>
+                <p class="machine">65 - 6 - 28 - 50 - 37</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">58 - 64 - 77 - 1 - 14</p>
+                <p class="machine">7 - 61 - 68 - 46 - 34</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">86 - 4 - 45 - 26 - 17</p>
+                <p class="machine">7 - 9 - 62 - 52 - 79</p>        
+            </article>
+            <article>
+                <h3 class="game">National</h3>
+                <p class="winning">42 - 19 - 67 - 48 - 6</p>
+                <p class="machine">8 - 69 - 90 - 66 - 63</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">23 - 33 - 26 - 10 - 51</p>
+                <p class="machine">3 - 6 - 70 - 85 - 56</p>        
             </article>
         </section>
     </div>
