--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -195,40 +195,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">friday 1/03/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">33 - 31 - 43 - 45 - 53</p>
-                <p class="machine">23 - 26 - 8 - 7 - 82</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">38 - 17 - 80 - 9 - 2</p>
-                <p class="machine">82 - 31 - 49 - 45 - 70</p>        
-            </article>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">6 - 81 - 21 - 77 - 1</p>
-                <p class="machine">28 - 57 - 2 - 50 - 35</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">10 - 12 - 76 - 6 - 62</p>
-                <p class="machine">24 - 52 - 58 - 23 - 55</p>        
-            </article>
-            <article>
-                <h3 class="game">Bonanza</h3>
-                <p class="winning">25 - 1 - 4 - 65 - 8</p>
-                <p class="machine">10 - 23 - 52 - 79 - 86</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">46 - 11 - 77 - 90 - 88</p>
-                <p class="machine">26 - 86 - 44 - 80 - 31</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">saturday 2/03/2024</h2>
             <article>
                 <h3 class="game">Premier King</h3>
@@ -259,6 +225,41 @@
                 <h3 class="game">Fair Chance</h3>
                 <p class="winning">23 - 33 - 26 - 10 - 51</p>
                 <p class="machine">3 - 6 - 70 - 85 - 56</p>        
+            </article>
+        </section>
+
+                                
+        <section aria-label="yesterday result">
+            <h2 class="date">sunday 03/3/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">54 - 45 - 38 - 28 - 84</p>
+                <p class="machine">72 - 22 - 10 - 18 - 6</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">64 - 3 - 23 - 54 - 78</p>
+                <p class="machine">65 - 46 - 25 - 51 - 22</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">90 - 79 - 4 - 83 - 38</p>
+                <p class="machine">68 - 20 - 48 - 19 - 40</p>        
+            </article>
+            <article>
+                <h3 class="game">Aseda</h3>
+                <p class="winning">1 - 38 - 81 - 25 - 75</p>
+                <p class="machine">36 - 70 - 17 - 4 - 58</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky</h3>
+                <p class="winning">50 - 63 - 68 - 52 - 12</p>
+                <p class="machine">76 - 77 - 78 - 55 - 90</p>        
+            </article>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">58 - 90 - 16 - 75 - 13</p>
+                <p class="machine">68 - 5 - 3 - 57 - 26</p>        
             </article>
         </section>
     </div>
