--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -199,41 +199,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">saturday 2/03/2024</h2>
-            <article>
-                <h3 class="game">Premier King</h3>
-                <p class="winning">58 - 74 - 17 - 80 - 55</p>
-                <p class="machine">88 - 44 - 76 - 48 - 13</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">52 - 31 - 18 - 61 - 21</p>
-                <p class="machine">65 - 6 - 28 - 50 - 37</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">58 - 64 - 77 - 1 - 14</p>
-                <p class="machine">7 - 61 - 68 - 46 - 34</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">86 - 4 - 45 - 26 - 17</p>
-                <p class="machine">7 - 9 - 62 - 52 - 79</p>        
-            </article>
-            <article>
-                <h3 class="game">National</h3>
-                <p class="winning">42 - 19 - 67 - 48 - 6</p>
-                <p class="machine">8 - 69 - 90 - 66 - 63</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">23 - 33 - 26 - 10 - 51</p>
-                <p class="machine">3 - 6 - 70 - 85 - 56</p>        
-            </article>
-        </section>
-
-                                
-        <section aria-label="yesterday result">
             <h2 class="date">sunday 03/3/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -264,6 +229,40 @@
                 <h3 class="game">Tota</h3>
                 <p class="winning">58 - 90 - 16 - 75 - 13</p>
                 <p class="machine">68 - 5 - 3 - 57 - 26</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">Monday 4/03/2024</h2>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">88 - 1 - 48 - 36 - 11</p>
+                <p class="machine">83 - 47 - 19 - 60 - 55</p>        
+            </article>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">26 - 75 - 46 - 16 - 62</p>
+                <p class="machine">13 - 8 - 59 - 33 - 43</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">76 - 16 - 33 - 24 - 6</p>
+                <p class="machine">87 - 41 - 80 - 60 - 5</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">49 - 29 - 12 - 8 - 42</p>
+                <p class="machine">74 - 58 - 36 - 41 - 32</p>        
+            </article>
+            <article>
+                <h3 class="game">MSP</h3>
+                <p class="winning">21 - 16 - 36 - 19 - 82</p>
+                <p class="machine">55 - 15 - 61 - 84 - 74</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">47 - 36 - 83 - 49 - 30</p>
+                <p class="machine">48 - 58 - 82 - 9 - 33</p>        
             </article>
         </section>
     </div>
