--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -199,40 +199,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">sunday 03/3/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">54 - 45 - 38 - 28 - 84</p>
-                <p class="machine">72 - 22 - 10 - 18 - 6</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">64 - 3 - 23 - 54 - 78</p>
-                <p class="machine">65 - 46 - 25 - 51 - 22</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">90 - 79 - 4 - 83 - 38</p>
-                <p class="machine">68 - 20 - 48 - 19 - 40</p>        
-            </article>
-            <article>
-                <h3 class="game">Aseda</h3>
-                <p class="winning">1 - 38 - 81 - 25 - 75</p>
-                <p class="machine">36 - 70 - 17 - 4 - 58</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">50 - 63 - 68 - 52 - 12</p>
-                <p class="machine">76 - 77 - 78 - 55 - 90</p>        
-            </article>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">58 - 90 - 16 - 75 - 13</p>
-                <p class="machine">68 - 5 - 3 - 57 - 26</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">Monday 4/03/2024</h2>
             <article>
                 <h3 class="game">Diamond</h3>
@@ -263,6 +229,40 @@
                 <h3 class="game">International</h3>
                 <p class="winning">47 - 36 - 83 - 49 - 30</p>
                 <p class="machine">48 - 58 - 82 - 9 - 33</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">tuesday 5/03/2024</h2>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">23 - 42 - 50 - 71 - 5</p>
+                <p class="machine">66 - 61 - 22 - 15 - 56</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">12 - 48 - 43 - 13 - 46</p>
+                <p class="machine">81 - 51 - 75 - 37 - 83</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">85 - 87 - 66 - 67 - 42</p>
+                <p class="machine">36 - 26 - 40 - 46 - 90</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">50 - 43 - 88 - 63 - 16</p>
+                <p class="machine">47 - 64 - 79 - 75 - 89</p>        
+            </article>
+            <article>
+                <h3 class="game">LUCKY-G</h3>
+                <p class="winning">83 - 55 - 78 - 82 - 44</p>
+                <p class="machine">51 - 62 - 73 - 75 - 54</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">85 - 50 - 15 - 38 - 51</p>
+                <p class="machine">40 - 87 - 75 - 29 - 90</p>        
             </article>
         </section>
     </div>
